# eden

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml  rust-toolchain.toml  test-deploy.sh
crates/bot/: Cargo.toml
crates/bot/definitions/: Cargo.toml
crates/bot/definitions/src/: lib.rs
crates/bot/src/: context.rs  error.rs  lib.rs
crates/bot/src/events/: guild_create.rs  interaction.rs  interaction_create.rs  mod.rs  ready.rs
crates/bot/src/interaction/: context.rs  mod.rs
crates/bot/src/interactions/: context.rs  mod.rs
crates/bot/src/settings/: bot.rs  database.rs  logging.rs  mod.rs  queue.rs
crates/bot/src/shard/: context.rs  mod.rs  observer.rs
crates/bot/src/tasks/: bill_payer.rs  mod.rs  register_commands.rs  test_task.rs  upsert_local_guild_admins.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  lib.rs  migrator.rs  test_utils.rs
crates/database/src/forms/: job.rs  mod.rs  payment.rs  task.rs
crates/database/src/impls/: admin.rs  bill.rs  identity.rs  job.rs  mod.rs  payer.rs  payer_application.rs  payment.rs  task.rs
crates/database/src/paged_queries/: get_all_bills.rs  get_all_identities.rs  get_all_jobs.rs  get_all_payments.rs  get_all_tasks.rs  mod.rs  pull_all_pending_jobs.rs  pull_all_pending_tasks.rs
crates/database/src/payment/: mod.rs  mynt.rs
crates/database/src/schema/: admin.rs  bill.rs  identity.rs  job.rs  mod.rs  payer.rs  payer_application.rs  payment.rs  task.rs
crates/database/src/utils/: id.rs  mod.rs  sql.rs
crates/eden-bot/: Cargo.toml
crates/eden-bot/src/: errors.rs  flags.rs  lib.rs  suggestions.rs  tests.rs
crates/eden-bot/src/context/: database.rs  mod.rs  util.rs
crates/eden-bot/src/events/: context.rs  guild_create.rs  interaction.rs  message_create.rs  mod.rs  reaction_add.rs  ready.rs
crates/eden-bot/src/features/: father_belt.rs  mod.rs
crates/eden-bot/src/interactions/: consts.rs  mod.rs  tags.rs  util.rs
crates/eden-bot/src/local_guild/: channel.rs  mod.rs
crates/eden-bot/src/shard/: manager.rs  mod.rs  observer.rs  runner.rs
crates/eden-bot/src/tasks/: alert_payment.rs  clear_inactive_interaction_states.rs  mod.rs  register_commands.rs  setup_local_guild.rs
crates/eden-bot/src/util/: http.rs  image.rs  mod.rs
crates/eden-discord-types/: Cargo.toml
crates/eden-discord-types/src/: lib.rs
crates/eden-discord-types/src/choices/: mod.rs  payment_method.rs
crates/eden-discord-types/src/commands/: mod.rs
crates/eden-schema/: Cargo.toml
crates/eden-schema/src/: lib.rs  test_utils.rs
crates/eden-schema/src/forms/: admin.rs  bill.rs  identity.rs  mod.rs  payer.rs  payer_application.rs  user.rs
crates/eden-schema/src/impls/: admin.rs  bill.rs  guild_settings.rs  identity.rs  mod.rs  payer.rs  payer_application.rs  payment.rs  user.rs
crates/eden-schema/src/paged_queries/: get_all_bills.rs  get_all_identities.rs  get_all_payments.rs  mod.rs
crates/eden-schema/src/payment/: mod.rs  version.rs
crates/eden-schema/src/types/: admin.rs  bill.rs  guild_settings.rs  identity.rs  mod.rs  payer.rs  payer_application.rs  payment.rs  user.rs
crates/eden-settings/: Cargo.toml
crates/eden-settings/src/: bot.rs  database.rs  error.rs  lib.rs  logging.rs  sentry.rs
crates/eden-tasks/: Cargo.toml
crates/eden-tasks-schema/: Cargo.toml
crates/eden-tasks-schema/src/: lib.rs  test_utils.rs
crates/eden-tasks-schema/src/forms/: mod.rs  task.rs
crates/eden-tasks-schema/src/impls/: task.rs
crates/eden-tasks-schema/src/paged_queries/: get_all_tasks.rs  mod.rs  pull_all_pending_tasks.rs
crates/eden-tasks-schema/src/types/: mod.rs  worker_id.rs
crates/eden-tasks/src/: lib.rs  settings.rs  test_utils.rs
crates/eden-tasks/src/error/: mod.rs  tags.rs
crates/eden-tasks/src/queue_worker/: catch_unwind.rs  database.rs  inner.rs  mod.rs  runner.rs  task_manager.rs
crates/eden-tasks/src/registry/: mod.rs  recurring.rs
crates/eden-tasks/src/task/: mod.rs  run_context.rs  trigger.rs
crates/eden-tasks/src/worker/: database.rs  inner.rs  mod.rs  runner.rs  task_manager.rs
crates/eden-utils/: Cargo.toml  build.rs
crates/eden-utils/src/: aliases.rs  build.rs  env.rs  hash.rs  lib.rs  sentry.rs  time.rs  vec.rs
crates/eden-utils/src/error/: any.rs  category.rs  exts.rs  into_error.rs  into_result.rs  mod.rs  prelude.rs  tags.rs
crates/eden-utils/src/sentry/: internal.rs  mod.rs
crates/eden-utils/src/serial/: human_duration.rs
crates/eden-utils/src/shutdown/: futures.rs  mod.rs
crates/eden-utils/src/sql/: error.rs  mod.rs  paginated.rs  tags.rs  util.rs
crates/eden-utils/src/tokio/: mod.rs
crates/eden-utils/src/twilight/: error.rs  mod.rs  tags.rs
crates/eden-utils/src/types/: mod.rs  protected_string.rs  sensitive.rs
crates/scheduler/: Cargo.toml
crates/scheduler/_old/: backoff.rs  lib.rs  prelude.rs
crates/scheduler/_old/job/: mod.rs  schedule.rs
crates/scheduler/_old/runner/: catch_unwind.rs  config.rs  error.rs  internal.rs  mod.rs  schedule.rs
crates/scheduler/src/: lib.rs  prelude.rs
crates/scheduler/src/job/: mod.rs  schedule.rs
crates/scheduler/src/runner/: catch_unwind.rs  config.rs  error.rs  internal.rs  mod.rs
crates/scheduler/src/scheduler/: catch_unwind.rs  config.rs  error.rs  internal.rs  mod.rs  registry.rs  scheduled.rs
crates/scheduler/src/task/: mod.rs  schedule.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: backoff.rs  error.rs  lib.rs  prelude.rs
crates/tasks/src/queue/: builder.rs  catch_unwind.rs  config.rs  error_tags.rs  mod.rs  periodic.rs  registry.rs  runner.rs
crates/tasks/src/task/: mod.rs  schedule.rs  scheduled.rs
crates/utils/: Cargo.toml  build.rs
crates/utils/src/: env.rs  lib.rs  sensitive.rs  signals.rs  suggestion.rs
crates/utils/src/error/: any.rs  category.rs  ext.rs  into_impls.rs  mod.rs  sql.rs
crates/utils/src/hash/: bytes.rs  mod.rs  stream.rs
eden/: Cargo.toml  build.rs
eden/src/: diagnostics.rs  lib.rs  logging.rs  main.rs  sentry.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/docker/: build.rs  mod.rs
xtask/src/generate/: mod.rs  settings.rs
(+85 files in other folders)
