[package]
name = "eden"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-db.workspace = true
eden-scheduler.workspace = true
eden-utils.workspace = true

sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
