[package]
name = "eden"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-bot.workspace = true
eden-db.workspace = true
eden-tasks.workspace = true
eden-utils.workspace = true

sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

tracing.workspace = true
tracing-error.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true
