[package]
name = "eden"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-settings.workspace = true
eden-tasks.workspace = true
eden-utils.workspace = true

nu-ansi-term = "0.50.1"
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[lints]
workspace = true
