[package]
name = "xtask"
description = "Development tasks for Eden project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-settings.workspace = true
eden-utils.workspace = true

clap.workspace = true
log = "*"
nu-ansi-term.workspace = true
pretty_env_logger = "0.5.0"
which = "6.0.2"
thiserror.workspace = true

[lints]
workspace = true
