[package]
name = "eden-bot"
description = "Eden's implementation of its Discord bot."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-db.workspace = true
eden-tasks.workspace = true
eden-utils.workspace = true

async-trait.workspace = true
chrono.workspace = true
fancy-duration.workspace = true
futures.workspace = true
once_cell.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_with.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

config = { version = "0.14.0", features = ["convert-case", "preserve_order", "toml"], default-features = false }
doku = "0.21.1"
itertools = "0.13.0"
num_cpus = "1.16.0"
strip-ansi-escapes = "0.2.0"

# twilight crates
twilight-cache-inmemory = { version = "0.15.4", features = ["permission-calculator"] }
twilight-gateway = { version = "0.15.4", features = ["rustls-native-roots", "zlib-simd"] }
twilight-http = { version = "0.15.4", default-features = false, features = ["rustls-native-roots", "decompression"] }
twilight-mention = "0.15.3"
twilight-model.workspace = true
twilight-interactions.workspace = true
twilight-util = { version = "0.15.2", features = ["builder", "permission-calculator", "snowflake"] }

[lints]
workspace = true
