[package]
name = "eden-db"
description = "Eden's database management crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
eden-utils.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
twilight-model.workspace = true
typed-builder = "0.18.2"
uuid.workspace = true

[lints]
workspace = true
