[package]
name = "eden-discord-types"
description = "Definitions for every interaction used for Eden"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-utils.workspace = true

twilight-model.workspace = true
twilight-interactions.workspace = true

[lints]
workspace = true
