[package]
name = "eden-schema"
description = "Database schema types for `eden` and `eden-discord`"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-utils.workspace = true

chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tracing.workspace = true
twilight-model.workspace = true
typed-builder.workspace = true
uuid.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[lints]
workspace = true
