[package]
name = "eden-tasks-schema"
description = "Database schema types for `eden-tasks`"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-utils.workspace = true

chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
typed-builder.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_test.workspace = true
static_assertions.workspace = true

[lints]
workspace = true
