[package]
name = "eden-tasks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-tasks-schema = { path = "../eden-tasks-schema" }
eden-utils.workspace = true

async-trait.workspace = true
chrono.workspace = true
cron_clock = "=0.8.0"
dashmap.workspace = true
doku.workspace = true
futures.workspace = true
paste.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
typed-builder.workspace = true
uuid.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[lints]
workspace = true
