[package]
name = "eden-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fundu = { version = "2.0.0", features = ["chrono"] }
strum_macros = "0.26.4"

error-stack.workspace = true
dotenvy.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing-error.workspace = true

[lints]
workspace = true
