[package]
name = "eden-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes = "1.7.1"
fundu = { version = "2.0.0", features = ["chrono"] }
zeroize = "1.8.1"

chrono.workspace = true
error-stack.workspace = true
dotenvy.workspace = true
hex.workspace = true
itertools.workspace = true
pin-project-lite.workspace = true
sentry.workspace = true
sentry-backtrace = "*"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
sqlx.workspace = true
strip-ansi-escapes.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-error.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
twilight-interactions.workspace = true

[build-dependencies]
anyhow = "1.0.86"
vergen-git2 = "1.0.0"

[dev-dependencies]
static_assertions.workspace = true

[lints]
workspace = true
