[package]
name = "eden-tasks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-db.workspace = true
eden-utils.workspace = true

chrono.workspace = true
cron_clock = "=0.8.0"
dashmap.workspace = true
futures.workspace = true
paste.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.11", features = ["full"] }
uuid.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[lints]
workspace = true
