[package]
name = "eden-bot-definitions"
description = "Definitions for every interaction used in Eden"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eden-utils.workspace = true

once_cell.workspace = true
twilight-model.workspace = true
twilight-interactions.workspace = true

[lints]
workspace = true
